finished component for all products

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,5 +16,6 @@
   "product-name": "Product name",
   "product-type": "Product type",
   "product-picture": "Product picture",
-  "product-description": "Product description"
+  "product-description": "Product description",
+  "search": "Search"
 }
