--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -16,5 +16,6 @@
   "product-name": "Ime proizvoda",
   "product-type": "Tip proizvoda",
   "product-picture": "Slika proizvoda",
-  "product-description": "Opis proizvoda"
+  "product-description": "Opis proizvoda",
+  "search": "Pretraži"
 }
