refactored add product function

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,13 @@
   "product-type": "Product type",
   "product-picture": "Product picture",
   "product-description": "Product description",
+  "product-sort": "Product sort",
+  "give-me-product": "Give me a product",
+  "next": "Next",
+  "previous": "Previous",
+  "yes": "Yes",
   "search": "Search",
+  "action": "Action",
   "active-auctions": "Active auctions",
   "create-auction": "Create auction",
   "dialog-closing": "Are you sure to close this dialog?",
