--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -17,7 +17,13 @@
   "product-type": "Tip proizvoda",
   "product-picture": "Slika proizvoda",
   "product-description": "Opis proizvoda",
+  "product-sort": "Sorta proizvoda",
+  "give-me-product": "Daj mi proizvod",
+  "next": "Sljedeći",
+  "previous": "Prethodni",
+  "yes": "Da",
   "search": "Pretraži",
+  "action": "Akcija",
   "active-auctions": "Aktivne aukcije",
   "create-auction": "Napravi aukciju",
   "dialog-closing": "Jeste li sigurni da zatvorite ovaj dijalog?",
